--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
   <button id="button">Open Modal</button>
 
-  <div id="modal" class="modal">
+  <div id="modal" class="modal" aria-hidden="true" role="dialog" aria-labelledby="modal-title">
     <div class="modal-content">
-      <span class="close">&times;</span>
-      <p>modal...</p>
+      <button class="close" aria-label="Close modal">&times;</button>
+      <h2 id="modal-title">Modal Title</h2>
+      <p>modal content goes here...</p>
     </div>
   </div>
   
