added main sections of window then sliding main

--- a/index.html
+++ b/index.html
@@ -11,9 +11,39 @@
 
   <div id="modal" class="modal" aria-hidden="true" role="dialog" aria-labelledby="modal-title">
     <div class="modal-content">
-      <button class="close" aria-label="Close modal">&times;</button>
-      <h2 id="modal-title">Modal Title</h2>
-      <p>modal content goes here...</p>
+      <div class="modal-header">
+        <h2 id="modal-title">Modal Title</h2>
+        <button class="close" aria-label="Close modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+        <p>Content...........</p>
+      </div>
+      <div class="modal-footer">
+        <button id="cancel-btn">Cancel</button>
+        <button id="confirm-btn">Confirm</button>
+      </div>
     </div>
   </div>
   
